--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -3,9 +3,9 @@ name: 'EKS Deployment'
 on:
   workflow_dispatch:
   
-on:
-  push:
-    branches: [ "main" ]
+#on:
+ #push:
+   #branches: [ "main" ]
   #pull_request:
 
 permissions:
